--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,148 +85,192 @@ footer a:hover { text-decoration: underline; }
 <button id="micBtn">🎤</button>
 <div id="micNotice"></div>
 <footer>
-© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
+© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a><br>
+Zum Starten den Kopf antippen, Mikro drücken zum Fragen
 </footer>
 
-<!-- Three.js -->
+<!-- Three.js + Loader -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
 let model, talking = false;
+let jawInfluences = null, jawIndex = null;
+let selectedVoice = null;
+let jawDriverRAF = null;
+
+// Szene, Kamera, Renderer
 const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
-camera.position.set(0,0.3,3);
-
+const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
 const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("avatarCanvas"), antialias: true });
-renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
+renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setClearColor(0x000000);
-
-const light = new THREE.DirectionalLight(0xffffff,1.5);
+scene.add(new THREE.AmbientLight(0x666666));
+const light = new THREE.DirectionalLight(0xffffff, 1.2);
 light.position.set(1,1,2);
 scene.add(light);
-scene.add(new THREE.AmbientLight(0x666666));
 
+// Lade Avatar
 const loader = new THREE.GLTFLoader();
 const loadingText = document.getElementById("loading");
 
-loader.load(
-  "./avatar.glb",
+loader.load("./avatar.glb",
   (gltf) => {
     model = gltf.scene;
-    model.scale.set(0.25,0.25,0.25);
-    model.position.set(0,-0.3,0);
+    // Passende Skalierung basierend auf Bounding Box
+    const box = new THREE.Box3().setFromObject(model);
+    const size = box.getSize(new THREE.Vector3());
+    const maxDim = Math.max(size.x, size.y, size.z);
+    const scaleFactor = 1.8 / maxDim; // anpassen für Bildschirm
+    model.scale.setScalar(scaleFactor);
+    const center = box.getCenter(new THREE.Vector3());
+    model.position.sub(center); // zentrieren
     scene.add(model);
-    loadingText.style.display="none";
+    initJawMorph();
+    loadingText.style.display = "none";
     animate();
   },
   undefined,
-  (err) => console.error("Fehler beim Laden des Modells:", err)
+  (err) => { console.error("Fehler beim Laden des Modells:", err); loadingText.textContent="Fehler beim Laden des Avatars"; }
 );
 
-let baseRotY=0, baseRotX=0, baseY=0;
+function initJawMorph() {
+  if (!model) return;
+  model.traverse(child => {
+    if (child.isMesh && child.morphTargetDictionary) {
+      jawInfluences = child.morphTargetInfluences;
+      jawIndex = child.morphTargetDictionary["jawOpen"] ?? null;
+    }
+  });
+}
 
+// Animation
+let baseRotY = 0, baseRotX = 0, baseY = 0;
 function animate() {
   requestAnimationFrame(animate);
-  if(model){
-    if(talking){
+  if (model) {
+    if (talking) {
       model.rotation.y = baseRotY + Math.sin(Date.now()*0.0015)*0.04;
       model.rotation.x = baseRotX + Math.sin(Date.now()*0.0019)*0.025;
       model.position.y = baseY + Math.sin(Date.now()*0.01)*0.004;
-    }else{
-      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y,baseRotY,0.05);
-      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x,baseRotX,0.05);
-      model.position.y = THREE.MathUtils.lerp(model.position.y,baseY,0.05);
+    } else {
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY,0.05);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX,0.05);
+      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY,0.05);
     }
   }
   renderer.render(scene,camera);
 }
 
-  // --- Sprachsteuerung / Mikrofon ---
-const micBtn = document.getElementById("micBtn");
-const micNotice = document.getElementById("micNotice");
-let recognizing = false, recognition;
+// Resize
+window.addEventListener("resize", () => {
+  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+});
 
-if("webkitSpeechRecognition" in window){
-  recognition = new webkitSpeechRecognition();
-  recognition.lang="de-DE";
-  recognition.continuous=false;
-  recognition.interimResults=false;
-
-  recognition.onresult = async (event) => {
-    const text = event.results[0][0].transcript;
-    console.log("🎙️ Gesprochen:", text);
-
-    try{
-      const resp = await fetch("/ask",{
-        method:"POST",
-        headers:{"Content-Type":"application/json"},
-        body:JSON.stringify({text})
-      });
-      const data = await resp.json();
-      speak(data.answer); // nur sprechen, kein Text
-    }catch(e){
-      console.error("Fehler bei /ask:", e);
-    }
-  };
-  recognition.onend = ()=> recognizing=false;
-}else{
-  micNotice.textContent="🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt, bitte anderen Browser verwenden.";
+// Sprachsynthese
+function getMaleVoice() {
+  const voices = speechSynthesis.getVoices();
+  selectedVoice = voices.find(v=> /male|mann|stefan|markus|male/i.test(v.name)) || voices.find(v=>v.lang.startsWith("de")) || voices[0];
+  return selectedVoice;
+}
+if (typeof speechSynthesis!=="undefined") {
+  speechSynthesis.onvoiceschanged = getMaleVoice;
+  getMaleVoice();
 }
 
-micBtn.onclick=()=>{
-  if(!recognition) return;
-  if(recognizing){
-    recognition.stop();
-    recognizing=false;
-    micBtn.style.background="#222";
-  }else{
-    recognition.start();
-    recognizing=true;
-    micBtn.style.background="#555";
+function buildPulseSchedule(text, rate=1.0){
+  const durationEst = Math.max(0.8, text.length/(12*rate));
+  const pulses=[];
+  const vowels="aäeéiíoöuüyAUOÄÖÜaeiou";
+  let t=0;
+  for(let i=0;i<text.length;i++){
+    const ch=text[i];
+    const strength = vowels.includes(ch)?1.0:0.6;
+    pulses.push({time:t,strength});
+    t += 0.09*(ch===" "?1.4:1.0);
   }
-};
+  const scale=durationEst/(t||1);
+  pulses.forEach(p=>p.time*=scale);
+  return {pulses,duration:durationEst};
+}
 
-// --- männliche Stimme & TTS ---
-function getMaleVoice(){
-  const voices = speechSynthesis.getVoices();
-  return voices.find(v=>/male|mann|stefan|markus|male/i.test(v.name)) ||
-         voices.find(v=>v.lang && v.lang.startsWith("de")) ||
-         voices[0] || null;
+function startJawDriver(text, rate=1.0){
+  if(!model||!jawInfluences||jawIndex===null) return;
+  if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
+  const {pulses,duration}=buildPulseSchedule(text, rate);
+  const start=performance.now();
+  const pulseWidth=0.08, base=0.03, maxOpen=0.55;
+  function envelopeAt(t){ let e=0; for(const p of pulses){ const dt=Math.abs(t-p.time); if(dt<pulseWidth)e+=(1-dt/pulseWidth)*p.strength;} e+=0.15*(0.5+0.5*Math.sin(t*6.0)); return Math.min(1.0,e);}
+  function step(){ 
+    const now=performance.now(); const t=(now-start)/1000;
+    if(talking&&jawInfluences&&jawIndex!==null){ 
+      const env=envelopeAt(Math.min(t,duration));
+      const target=THREE.MathUtils.clamp(base+env*maxOpen,0,1);
+      jawInfluences[jawIndex]=THREE.MathUtils.lerp(jawInfluences[jawIndex]||0,target,0.5);
+      jawDriverRAF=requestAnimationFrame(step);
+    }
+  } step();
+}
+
+function stopJawDriver(){ 
+  if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
+  jawDriverRAF=null;
+  if(jawInfluences&&jawIndex!==null){
+    const closer=()=>{ 
+      const current=jawInfluences[jawIndex]||0;
+      const next=THREE.MathUtils.lerp(current,0,0.3);
+      jawInfluences[jawIndex]=next;
+      if(Math.abs(next)>0.001) requestAnimationFrame(closer);
+    }; closer();
+  }
 }
 
 function speak(text){
-  const utter = new SpeechSynthesisUtterance(text);
+  if(!text) return;
+  const utter=new SpeechSynthesisUtterance(text);
   utter.lang="de-DE";
   utter.rate=0.95;
   utter.pitch=0.6;
-  utter.voice=getMaleVoice();
-  utter.onstart=()=>{ talking=true; };
-  utter.onend=()=>{ talking=false; };
+  utter.voice=selectedVoice;
+  utter.onstart=()=>{ talking=true; startJawDriver(text,utter.rate); };
+  utter.onend=()=>{ talking=false; stopJawDriver(); };
   speechSynthesis.speak(utter);
 }
 
-// --- Stimmen laden ---
-if(typeof speechSynthesis!=="undefined" && speechSynthesis.onvoiceschanged!==undefined){
-  speechSynthesis.onvoiceschanged = ()=>{ getMaleVoice(); };
-}
-
-// --- Begrüßung nach erster Interaktion ---
+// Begrüßung bei erster Berührung
 let greeted=false;
 window.addEventListener("click",()=>{
-  if(!greeted){
-    greeted=true;
-    speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
-  }
+  if(!greeted){ greeted=true; speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?"); }
 });
 
-// --- Fenstergröße anpassen ---
-window.addEventListener("resize",()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth,window.innerHeight);
-});
+// Mikrofon Setup (Platzhalter für späteren /ask Call)
+const micBtn=document.getElementById("micBtn");
+const micNotice=document.getElementById("micNotice");
+let recognizing=false;
+let recognition;
+if("webkitSpeechRecognition"in window){
+  recognition=new webkitSpeechRecognition();
+  recognition.lang="de-DE";
+  recognition.continuous=false;
+  recognition.interimResults=false;
+  recognition.onresult=async(event)=>{
+    const text=event.results[0][0].transcript;
+    console.log("🎙️ Gesprochen:",text);
+    // Hier kann später KI-Aufruf eingefügt werden
+    // const response = await fetch("/ask", {...}); speak(response.answer);
+  };
+  recognition.onend=()=>recognizing=false;
+} else {
+  micNotice.textContent="🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt.";
+}
+micBtn.onclick=()=>{
+  if(!recognition) return;
+  if(recognizing){ recognition.stop(); recognizing=false; micBtn.style.background="#222"; }
+  else{ recognition.start(); recognizing=true; micBtn.style.background="#555"; }
+};
 </script>
 </body>
 </html>
