--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@ h1 {
   animation: pulse 3s ease-in-out infinite;
 }
 @keyframes pulse {
-  0%, 100% { transform: scale(1); opacity: 1; }
+  0%,100% { transform: scale(1); opacity: 1; }
   50% { transform: scale(1.05); opacity: 0.9; }
 }
 #avatarCanvas { width: 100%; height: 100%; display: block; }
@@ -85,192 +85,157 @@ footer a:hover { text-decoration: underline; }
 <button id="micBtn">🎤</button>
 <div id="micNotice"></div>
 <footer>
-© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a><br>
-Zum Starten den Kopf antippen, Mikro drücken zum Fragen
+© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
 </footer>
 
-<!-- Three.js + Loader -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
-let model, talking = false;
-let jawInfluences = null, jawIndex = null;
-let selectedVoice = null;
-let jawDriverRAF = null;
+let model, talking=false, jawIndex=null, jawInfluences=null;
+let baseRotY=0, baseRotX=0, baseY=0;
 
-// Szene, Kamera, Renderer
 const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 0.1, 1000);
-const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("avatarCanvas"), antialias: true });
-renderer.setPixelRatio(window.devicePixelRatio);
+const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
+const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById("avatarCanvas"), antialias:true });
 renderer.setSize(window.innerWidth, window.innerHeight);
+renderer.setPixelRatio(window.devicePixelRatio);
 renderer.setClearColor(0x000000);
-scene.add(new THREE.AmbientLight(0x666666));
-const light = new THREE.DirectionalLight(0xffffff, 1.2);
-light.position.set(1,1,2);
-scene.add(light);
 
-// Lade Avatar
+camera.position.set(0,0,2.5);
+scene.add(new THREE.DirectionalLight(0xffffff,1.2));
+scene.add(new THREE.AmbientLight(0x666666));
+
 const loader = new THREE.GLTFLoader();
 const loadingText = document.getElementById("loading");
 
-loader.load("./avatar.glb",
+loader.load(
+  "./avatar.glb",
   (gltf) => {
     model = gltf.scene;
-    // Passende Skalierung basierend auf Bounding Box
+    // Skaliere und zentriere das Modell dynamisch nach Box
     const box = new THREE.Box3().setFromObject(model);
     const size = box.getSize(new THREE.Vector3());
-    const maxDim = Math.max(size.x, size.y, size.z);
-    const scaleFactor = 1.8 / maxDim; // anpassen für Bildschirm
-    model.scale.setScalar(scaleFactor);
+    const maxDim = Math.max(size.x,size.y,size.z);
+    const scale = 1.2 / maxDim; // passt ins Sichtfeld
+    model.scale.set(scale,scale,scale);
     const center = box.getCenter(new THREE.Vector3());
-    model.position.sub(center); // zentrieren
+    model.position.sub(center);
     scene.add(model);
-    initJawMorph();
-    loadingText.style.display = "none";
+
+    // Morph Target jawOpen finden
+    model.traverse(c=>{
+      if(c.isMesh && c.morphTargetDictionary){
+        jawInfluences=c.morphTargetInfluences;
+        if("jawOpen" in c.morphTargetDictionary) jawIndex=c.morphTargetDictionary["jawOpen"];
+      }
+    });
+
+    loadingText.style.display="none";
     animate();
+
+    // Begrüßung direkt nach Laden
+    speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht. Sprecht, was begehrt Ihr?");
   },
   undefined,
-  (err) => { console.error("Fehler beim Laden des Modells:", err); loadingText.textContent="Fehler beim Laden des Avatars"; }
+  (err) => {
+    console.error("Fehler beim Laden des Modells:", err);
+    loadingText.textContent="Fehler beim Laden des Avatars (siehe Konsole)";
+  }
 );
 
-function initJawMorph() {
-  if (!model) return;
-  model.traverse(child => {
-    if (child.isMesh && child.morphTargetDictionary) {
-      jawInfluences = child.morphTargetInfluences;
-      jawIndex = child.morphTargetDictionary["jawOpen"] ?? null;
-    }
-  });
-}
-
-// Animation
-let baseRotY = 0, baseRotX = 0, baseY = 0;
-function animate() {
+function animate(){
   requestAnimationFrame(animate);
-  if (model) {
-    if (talking) {
+  if(model){
+    if(talking){
       model.rotation.y = baseRotY + Math.sin(Date.now()*0.0015)*0.04;
       model.rotation.x = baseRotX + Math.sin(Date.now()*0.0019)*0.025;
       model.position.y = baseY + Math.sin(Date.now()*0.01)*0.004;
-    } else {
+    }else{
       model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY,0.05);
       model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX,0.05);
       model.position.y = THREE.MathUtils.lerp(model.position.y, baseY,0.05);
+    }
+    // Kiefer-Animation
+    if(Array.isArray(jawInfluences) && jawIndex!==null){
+      jawInfluences[jawIndex]=talking?0.6:0;
     }
   }
   renderer.render(scene,camera);
 }
 
-// Resize
-window.addEventListener("resize", () => {
-  camera.aspect = window.innerWidth / window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
+  // --- Teil 2 ---
+const micBtn = document.getElementById("micBtn");
+const micNotice = document.getElementById("micNotice");
+let recognizing=false, recognition;
 
-// Sprachsynthese
-function getMaleVoice() {
-  const voices = speechSynthesis.getVoices();
-  selectedVoice = voices.find(v=> /male|mann|stefan|markus|male/i.test(v.name)) || voices.find(v=>v.lang.startsWith("de")) || voices[0];
-  return selectedVoice;
-}
-if (typeof speechSynthesis!=="undefined") {
-  speechSynthesis.onvoiceschanged = getMaleVoice;
-  getMaleVoice();
-}
-
-function buildPulseSchedule(text, rate=1.0){
-  const durationEst = Math.max(0.8, text.length/(12*rate));
-  const pulses=[];
-  const vowels="aäeéiíoöuüyAUOÄÖÜaeiou";
-  let t=0;
-  for(let i=0;i<text.length;i++){
-    const ch=text[i];
-    const strength = vowels.includes(ch)?1.0:0.6;
-    pulses.push({time:t,strength});
-    t += 0.09*(ch===" "?1.4:1.0);
-  }
-  const scale=durationEst/(t||1);
-  pulses.forEach(p=>p.time*=scale);
-  return {pulses,duration:durationEst};
-}
-
-function startJawDriver(text, rate=1.0){
-  if(!model||!jawInfluences||jawIndex===null) return;
-  if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-  const {pulses,duration}=buildPulseSchedule(text, rate);
-  const start=performance.now();
-  const pulseWidth=0.08, base=0.03, maxOpen=0.55;
-  function envelopeAt(t){ let e=0; for(const p of pulses){ const dt=Math.abs(t-p.time); if(dt<pulseWidth)e+=(1-dt/pulseWidth)*p.strength;} e+=0.15*(0.5+0.5*Math.sin(t*6.0)); return Math.min(1.0,e);}
-  function step(){ 
-    const now=performance.now(); const t=(now-start)/1000;
-    if(talking&&jawInfluences&&jawIndex!==null){ 
-      const env=envelopeAt(Math.min(t,duration));
-      const target=THREE.MathUtils.clamp(base+env*maxOpen,0,1);
-      jawInfluences[jawIndex]=THREE.MathUtils.lerp(jawInfluences[jawIndex]||0,target,0.5);
-      jawDriverRAF=requestAnimationFrame(step);
-    }
-  } step();
-}
-
-function stopJawDriver(){ 
-  if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-  jawDriverRAF=null;
-  if(jawInfluences&&jawIndex!==null){
-    const closer=()=>{ 
-      const current=jawInfluences[jawIndex]||0;
-      const next=THREE.MathUtils.lerp(current,0,0.3);
-      jawInfluences[jawIndex]=next;
-      if(Math.abs(next)>0.001) requestAnimationFrame(closer);
-    }; closer();
-  }
-}
-
-function speak(text){
-  if(!text) return;
-  const utter=new SpeechSynthesisUtterance(text);
-  utter.lang="de-DE";
-  utter.rate=0.95;
-  utter.pitch=0.6;
-  utter.voice=selectedVoice;
-  utter.onstart=()=>{ talking=true; startJawDriver(text,utter.rate); };
-  utter.onend=()=>{ talking=false; stopJawDriver(); };
-  speechSynthesis.speak(utter);
-}
-
-// Begrüßung bei erster Berührung
-let greeted=false;
-window.addEventListener("click",()=>{
-  if(!greeted){ greeted=true; speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?"); }
-});
-
-// Mikrofon Setup (Platzhalter für späteren /ask Call)
-const micBtn=document.getElementById("micBtn");
-const micNotice=document.getElementById("micNotice");
-let recognizing=false;
-let recognition;
-if("webkitSpeechRecognition"in window){
-  recognition=new webkitSpeechRecognition();
+if("webkitSpeechRecognition" in window){
+  recognition = new webkitSpeechRecognition();
   recognition.lang="de-DE";
   recognition.continuous=false;
   recognition.interimResults=false;
-  recognition.onresult=async(event)=>{
+
+  recognition.onresult=async (event)=>{
     const text=event.results[0][0].transcript;
-    console.log("🎙️ Gesprochen:",text);
-    // Hier kann später KI-Aufruf eingefügt werden
-    // const response = await fetch("/ask", {...}); speak(response.answer);
+    console.log("🎙️ Gesprochen:", text);
+
+    try{
+      const resp = await fetch("/ask",{
+        method:"POST",
+        headers:{"Content-Type":"application/json"},
+        body:JSON.stringify({text})
+      });
+      const data = await resp.json();
+      speak(data.answer);
+    }catch(e){
+      console.error("Fehler bei /ask:",e);
+    }
   };
-  recognition.onend=()=>recognizing=false;
-} else {
-  micNotice.textContent="🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt.";
+  recognition.onend=()=>{recognizing=false; micBtn.style.background="#222";};
+}else{
+  micNotice.textContent="🎤 Sprachsteuerung nicht unterstützt, bitte anderen Browser verwenden.";
 }
+
 micBtn.onclick=()=>{
   if(!recognition) return;
-  if(recognizing){ recognition.stop(); recognizing=false; micBtn.style.background="#222"; }
-  else{ recognition.start(); recognizing=true; micBtn.style.background="#555"; }
+  if(recognizing){
+    recognition.stop();
+    recognizing=false;
+    micBtn.style.background="#222";
+  }else{
+    recognition.start();
+    recognizing=true;
+    micBtn.style.background="#555";
+  }
 };
+
+function getMaleVoice(){
+  const voices = speechSynthesis.getVoices();
+  return voices.find(v=>/male|mann|stefan|markus|male/i.test(v.name))||
+         voices.find(v=>v.lang.startsWith("de"))||
+         voices[0];
+}
+
+function speak(text){
+  const utter = new SpeechSynthesisUtterance(text);
+  utter.lang="de-DE";
+  utter.rate=0.95;
+  utter.pitch=0.6;
+  utter.voice=getMaleVoice();
+  utter.onstart=()=>{talking=true;};
+  utter.onend=()=>{talking=false;};
+  speechSynthesis.speak(utter);
+}
+
+if(typeof speechSynthesis!=="undefined" && speechSynthesis.onvoiceschanged!==undefined){
+  speechSynthesis.onvoiceschanged=getMaleVoice;
+}
+
+window.addEventListener("resize",()=>{
+  camera.aspect=window.innerWidth/window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth,window.innerHeight);
+});
 </script>
 </body>
 </html>
